# game_of_life

./: CMakeLists.txt  README.md  run.bat
include/: crea.hpp  gi.hpp  joint.hpp  link.hpp  main.hpp  test.hpp
src/: crea.cpp  gi.cpp  joint.cpp  link.cpp  main.cpp  test.cpp
